# mdict-analysis-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  pure_salsa20.rs  readmdict.rs  ripemd128.rs
tests/: demov2.mdd  demov2.mdx  demov2_reg.mdx  mdict_test.rs  mdict_test_v2.rs  mdict_test_v3.rs  test.mdd  test.mdx  test_regcode.mdx
