[package]
name = "mdict-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
adler2 = "2.0.0"
base64 = "0.22.1"
byteorder = "1.5.0"
encoding_rs = "0.8.34"
flate2 = { version = "1.0.34", features = ["zlib"] }
generator = "0.8.3"
hex = "0.4.3"
libc = "0.2.159"
regex = "1.10.6"
rust-lzo = "0.6.2"
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }

[lib]
name = "mdict_analysis"
